# gerrit

./: .bazelrc  .gitignore  AGENTS.md  BUILD  MODULE.bazel  WORKSPACE.bzlmod  external_deps.lock.json  gerrit_deps.lock.json  package.json  version.bzl
Documentation/: access-control.txt  config-gerrit.txt  config-labels.txt  dev-bazel.txt  dev-build-plugins.txt  dev-plugins.txt  dev-roles.txt  js_licenses.txt  licenses.txt  rest-api-changes.txt
java/com/google/gerrit/entities/: AccountGroup.java  Permission.java
java/com/google/gerrit/extensions/: BUILD
lib/: BUILD
lib/antlr/: BUILD
lib/asciidoctor/: BUILD
lib/auto/: BUILD
lib/bouncycastle/: BUILD
lib/commons/: BUILD
lib/dropwizard/: BUILD
lib/errorprone/: BUILD
lib/flogger/: BUILD
lib/gitiles/: BUILD
lib/greenmail/: BUILD
lib/guice/: BUILD
lib/httpcomponents/: BUILD
lib/jetty/: BUILD
lib/jsoup/: BUILD
lib/log/: BUILD
lib/lucene/: BUILD
lib/mail/: BUILD
lib/mime4j/: BUILD
lib/mina/: BUILD
lib/mockito/: BUILD
lib/openid/: BUILD
lib/ow2/: BUILD
lib/prolog/: BUILD
lib/truth/: BUILD
plugins/: BUILD  package.json  tsconfig-plugins-base.json
polygerrit-ui/: AGENTS.md  BUILD  package.json  web-test-runner.config.mjs
polygerrit-ui/app/: eslint-bazel.config.js  package.json  rules.bzl
polygerrit-ui/app/api/: ai-code-review.ts  diff.ts  flows.ts  plugin.ts  publish.sh  rest-api.ts
polygerrit-ui/app/constants/: reporting.ts
polygerrit-ui/app/elements/admin/gr-access-section/: gr-access-section.ts  gr-access-section_test.ts
polygerrit-ui/app/elements/admin/gr-group/: gr-group.ts  gr-group_test.ts
polygerrit-ui/app/elements/admin/gr-group-audit-log/: gr-group-audit-log_test.ts
polygerrit-ui/app/elements/admin/gr-group-members/: gr-group-members.ts  gr-group-members_test.ts
polygerrit-ui/app/elements/admin/gr-permission/: gr-permission.ts  gr-permission_test.ts
polygerrit-ui/app/elements/admin/gr-plugin-list/: gr-plugin-list_test.ts
polygerrit-ui/app/elements/admin/gr-repo/: gr-repo_test.ts
polygerrit-ui/app/elements/admin/gr-repo-access/: gr-repo-access_test.ts
polygerrit-ui/app/elements/admin/gr-repo-commands/: gr-repo-commands_test.ts
polygerrit-ui/app/elements/admin/gr-repo-dashboards/: gr-repo-dashboards_test.ts
polygerrit-ui/app/elements/change-list/gr-change-list/: gr-change-list.ts  gr-change-list_test.ts
polygerrit-ui/app/elements/change-list/gr-change-list-bulk-vote-flow/: gr-change-list-bulk-vote-flow_test.ts
polygerrit-ui/app/elements/change-list/gr-dashboard-view/: gr-dashboard-view.ts  gr-dashboard-view_test.ts
polygerrit-ui/app/elements/change/gr-ai-prompt-dialog/: gr-ai-prompt-dialog.ts  gr-ai-prompt-dialog_test.ts
polygerrit-ui/app/elements/change/gr-change-actions/: gr-change-actions.ts  gr-change-actions_test.ts
polygerrit-ui/app/elements/change/gr-change-summary/: gr-change-summary.ts  gr-change-summary_test.ts
polygerrit-ui/app/elements/change/gr-change-view/: gr-change-view.ts  gr-change-view_screenshot_test.ts  gr-change-view_test.ts
polygerrit-ui/app/elements/change/gr-copy-links/: gr-copy-links.ts
polygerrit-ui/app/elements/change/gr-file-list/: gr-file-list.ts  gr-file-list_test.ts
polygerrit-ui/app/elements/change/gr-flows/: gr-create-flow.ts  gr-create-flow_screenshot_test.ts  gr-create-flow_test.ts  gr-flow-rule.ts  gr-flow-rule_test.ts  gr-flows.ts  gr-flows_screenshot_test.ts  gr-flows_test.ts
polygerrit-ui/app/elements/change/gr-label-scores/: gr-label-scores.ts  gr-label-scores_screenshot_test.ts  gr-label-scores_test.ts
polygerrit-ui/app/elements/change/gr-message/: gr-message.ts
polygerrit-ui/app/elements/change/gr-reply-dialog/: gr-reply-dialog.ts  gr-reply-dialog_screenshot_test.ts  gr-reply-dialog_test.ts
polygerrit-ui/app/elements/chat-panel/: chat-header.ts  chat-panel.ts  chat-panel_screenshot_test.ts  chat-panel_test.ts  citations-box_test.ts  context-chip.ts  context-chip_test.ts  context-input-chip.ts  context-input-chip_test.ts  gemini-message.ts  gemini-message_test.ts  message-actions.ts  prompt-box.ts  references-dropdown.ts  splash-page-action.ts  splash-page-action_screenshot_test.ts  splash-page-action_test.ts  splash-page.ts
polygerrit-ui/app/elements/checks/: gr-checks-results.ts  gr-checks-results_test.ts  gr-checks-runs.ts  gr-diff-check-result.ts  gr-diff-check-result_test.ts
polygerrit-ui/app/elements/core/gr-search-autocomplete/: gr-search-autocomplete.ts  gr-search-autocomplete_test.ts
polygerrit-ui/app/elements/diff/gr-diff-view/: gr-diff-view.ts  gr-diff-view_test.ts
polygerrit-ui/app/elements/shared/gr-button/: gr-button.ts
polygerrit-ui/app/embed/: gr-textarea.ts
polygerrit-ui/app/models/accounts/: accounts-model_test.ts
polygerrit-ui/app/models/chat/: chat-model.ts  chat-model_test.ts
polygerrit-ui/app/models/checks/: checks-util.ts  checks-util_test.ts
polygerrit-ui/app/models/comments/: comments-model.ts
polygerrit-ui/app/models/flows/: flows-model.ts  flows-model_test.ts
polygerrit-ui/app/models/plugins/: plugins-model.ts
polygerrit-ui/app/models/views/: admin_test.ts
polygerrit-ui/app/services/: app-context-init.ts
polygerrit-ui/app/services/flags/: flags.ts
polygerrit-ui/app/services/gr-rest-api/: gr-rest-api-impl.ts
polygerrit-ui/app/test/: common-test-setup.ts  test-data-generators.ts  test-utils.ts
polygerrit-ui/app/types/: common.ts  events.ts
polygerrit-ui/app/utils/: access-util.ts  async-util_test.ts  comment-util.ts  comment-util_test.ts  deep-util_test.ts  label-suggestions-provider.ts  label-suggestions-provider_test.ts  periodic-update-util.ts  periodic-update-util_test.ts
proto/: cache.proto  entities.proto
tools/: BUILD  bazlets.MODULE.bazel  defs.bzl  deps.bzl  deps.toml  gjf.sh  nongoogle.bzl  nongoogle.toml
tools/bzl/: classpath.bzl  genrule2.bzl  js.bzl  pkg_war.bzl  plugin.bzl
tools/eclipse/: BUILD  project.py
tools/js/: eslint-chdir.js
tools/maven/: BUILD  gerrit-acceptance-framework_pom.xml  gerrit-extension-api_pom.xml  gerrit-plugin-api_pom.xml  gerrit-war_pom.xml
tools/node_tools/: package.json
(+84 files in other folders)
