# TODO(davido): Migrate all dependencies from WORKSPACE to MODULE.bazel
# https://issues.gerritcodereview.com/issues/303819949

bazel_dep(name = "bazel_features", version = "1.39.0")
bazel_dep(name = "rules_jvm_external", version = "6.7")
bazel_dep(name = "rules_shell", version = "0.6.1")

# nongoogle bazel_deps
bazel_dep(name = "rules_java", version = "7.6.1")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_python", version = "1.8.0-rc1")

# This must come BEFORE bazel_dep(name = "protobuf")
# because they register the from-source toolchain,
# and the first registration wins.
bazel_dep(name = "toolchains_protoc", version = "0.6.0")
bazel_dep(name = "protobuf", version = "33.2")
bazel_dep(name = "jgit")
local_path_override(
    module_name = "jgit",
    path = "./modules/jgit",
)

bazel_dep(name = "rbe_autoconfig")
git_override(
    module_name = "rbe_autoconfig",
    commit = "c4d733d0399ebf2ee1ffb897be5fbaba23738e04",
    remote = "https://github.com/davido/rbe_autoconfig.git",
)

register_toolchains("//tools:all")
