# Plugin packaging support kept outside the root module declaration:
# - bazlets dependency pin
# - generated Gerrit API version repo for artifact versioning and stamping
GERRIT_VERSION = "3.13.5-SNAPSHOT"

bazel_dep(name = "com_googlesource_gerrit_bazlets")
git_override(
    module_name = "com_googlesource_gerrit_bazlets",
    commit = "5a2a653fcf77ac3fca619f9944246ca7f339849d",
    remote = "https://gerrit.googlesource.com/bazlets",
)

gerrit_api_version = use_repo_rule(
    "@com_googlesource_gerrit_bazlets//:gerrit_api_version.bzl",
    "gerrit_api_version",
)

gerrit_api_version(
    name = "gerrit_api_version",
    version = GERRIT_VERSION,
    visibility = ["//visibility:public"],
)
