# Plugin packaging support kept outside the root module declaration:
# - bazlets dependency pin
# - generated Gerrit API version repo for artifact versioning and stamping
GERRIT_VERSION = "3.14.0-rc4"

bazel_dep(name = "com_googlesource_gerrit_bazlets")
git_override(
    module_name = "com_googlesource_gerrit_bazlets",
    commit = "01ec9c2481186396dde1bc6f5166f7d95bdae134",
    remote = "https://gerrit.googlesource.com/bazlets",
)

gerrit_api_version = use_repo_rule(
    "@com_googlesource_gerrit_bazlets//:gerrit_api_version.bzl",
    "gerrit_api_version",
)

gerrit_api_version(
    name = "gerrit_api_version",
    version = GERRIT_VERSION,
    visibility = ["//visibility:public"],
)
